@@ -42,10 +42,8 @@ public:
         testrunner::get_instance()->register_fixture(this);
         BFC_REGISTER_TEST(APIv110Test, transactionTest);
         BFC_REGISTER_TEST(APIv110Test, v10xDBformatDetectTest);
-        BFC_REGISTER_TEST(APIv110Test, getDefaultEnvParamsTest);
         BFC_REGISTER_TEST(APIv110Test, getInitializedEnvParamsTest);
         BFC_REGISTER_TEST(APIv110Test, getInitializedReadonlyEnvParamsTest);
-        BFC_REGISTER_TEST(APIv110Test, getDefaultDbParamsTest);
         BFC_REGISTER_TEST(APIv110Test, getInitializedDbParamsTest);
         BFC_REGISTER_TEST(APIv110Test, getInitializedReadonlyDbParamsTest);
     }
@@ -158,45 +156,6 @@ public:
         return (ham_offset_t)-1;
     }
 
-    void getDefaultEnvParamsTest(void)
-    {
-        ham_statistics_t stats = {0};
-        ham_parameter_t params[] =
-        {
-            {HAM_PARAM_CACHESIZE, 0},
-            {HAM_PARAM_PAGESIZE, 0},
-            {HAM_PARAM_MAX_ENV_DATABASES, 0},
-            {HAM_PARAM_GET_FLAGS, 0},
-            {HAM_PARAM_GET_FILEMODE, 0},
-            {HAM_PARAM_GET_FILENAME, 0},
-            {HAM_PARAM_GET_STATISTICS, (ham_offset_t)&stats},
-            {0,0}
-        };
-
-        ham_size_t sollwert_pagesize = os_get_pagesize();
-        ham_size_t sollwert_cachesize = HAM_DEFAULT_CACHESIZE;
-
-        BFC_ASSERT_EQUAL(0, ham_env_get_parameters(NULL, params));
-
-        BFC_ASSERT_EQUAL(1u, stats.dont_collect_global_stats);
-        BFC_ASSERT_EQUAL(1u, stats.dont_collect_db_stats);
-        BFC_ASSERT_EQUAL(1u, stats.dont_collect_freelist_stats);
-        BFC_ASSERT_EQUAL(sollwert_cachesize, 
-                get_param_value(params, HAM_PARAM_CACHESIZE));
-        BFC_ASSERT_EQUAL(sollwert_pagesize, 
-                get_param_value(params, HAM_PARAM_PAGESIZE));
-        BFC_ASSERT_EQUAL((ham_offset_t)DB_MAX_INDICES, 
-                get_param_value(params, HAM_PARAM_MAX_ENV_DATABASES));
-        BFC_ASSERT_EQUAL((ham_offset_t)0,
-                get_param_value(params, HAM_PARAM_GET_FLAGS));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_GET_FILEMODE));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_GET_FILENAME));
-        BFC_ASSERT_EQUAL((ham_offset_t)&stats, 
-                get_param_value(params, HAM_PARAM_GET_STATISTICS));
-    }
-
     void getInitializedEnvParamsTest(void)
     {
         ham_env_t *env;
@@ -296,57 +255,6 @@ public:
 
         BFC_ASSERT_EQUAL(0, ham_env_close(env, 0));
         ham_env_delete(env);
-    }
-
-    void getDefaultDbParamsTest(void)
-    {
-        ham_statistics_t stats = {0};
-        ham_parameter_t params[] =
-        {
-            {HAM_PARAM_CACHESIZE, 0},
-            {HAM_PARAM_KEYSIZE, 0},
-            {HAM_PARAM_PAGESIZE, 0},
-            {HAM_PARAM_MAX_ENV_DATABASES, 0},
-            {HAM_PARAM_DBNAME, 0},
-            {HAM_PARAM_GET_FLAGS, 0},
-            {HAM_PARAM_GET_FILEMODE, 0},
-            {HAM_PARAM_GET_FILENAME, 0},
-            {HAM_PARAM_GET_KEYS_PER_PAGE, 0},
-            {HAM_PARAM_GET_DATA_ACCESS_MODE, 0},
-            {HAM_PARAM_GET_STATISTICS, (ham_offset_t)&stats},
-            {0,0}
-        };
-
-        ham_size_t sollwert_pagesize = os_get_pagesize();
-        ham_size_t sollwert_cachesize = HAM_DEFAULT_CACHESIZE;
-        ham_size_t sollwert_keysize = 21;
-
-        BFC_ASSERT_EQUAL(0, ham_get_parameters(NULL, params));
-        BFC_ASSERT_EQUAL(1u, stats.dont_collect_global_stats);
-        BFC_ASSERT_EQUAL(1u, stats.dont_collect_db_stats);
-        BFC_ASSERT_EQUAL(1u, stats.dont_collect_freelist_stats);
-        BFC_ASSERT_EQUAL(sollwert_cachesize, 
-                get_param_value(params, HAM_PARAM_CACHESIZE));
-        BFC_ASSERT_EQUAL(sollwert_keysize, 
-                get_param_value(params, HAM_PARAM_KEYSIZE));
-        BFC_ASSERT_EQUAL(sollwert_pagesize, 
-                get_param_value(params, HAM_PARAM_PAGESIZE));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_GET_DATA_ACCESS_MODE));
-        BFC_ASSERT_EQUAL((ham_offset_t)DB_MAX_INDICES,
-                get_param_value(params, HAM_PARAM_MAX_ENV_DATABASES));
-        BFC_ASSERT_EQUAL((ham_offset_t)0,
-                get_param_value(params, HAM_PARAM_GET_KEYS_PER_PAGE));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_DBNAME));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_GET_FLAGS));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_GET_FILEMODE));
-        BFC_ASSERT_EQUAL((ham_offset_t)0, 
-                get_param_value(params, HAM_PARAM_GET_FILENAME));
-        BFC_ASSERT_EQUAL((ham_offset_t)&stats, 
-                get_param_value(params, HAM_PARAM_GET_STATISTICS));
     }
 
     void getInitializedDbParamsTest(void)
